--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,5 @@ results*/
 # .gitignore is already tracked or if you use -f to
 # force-add it if you just created it
 !/.gitignore
+*:Zone.Identifier
+
