--- a/environment.yml
+++ b/environment.yml
@@ -1,165 +1,188 @@
 name: ECSE552proj
 channels:
+  - pytorch
+  - conda-forge
   - defaults
 dependencies:
-  - defaults/linux-64::_libgcc_mutex==0.1=main
-  - defaults/linux-64::blas==1.0=mkl
-  - ca-certificates
-  - defaults/linux-64::intel-openmp==2021.4.0=h06a4308_3561
-  - defaults/linux-64::ld_impl_linux-64==2.35.1=h7274673_9
-  - defaults/linux-64::libgfortran4==7.5.0=ha8ba4b0_17
-  - defaults/linux-64::libstdcxx-ng==9.3.0=hd4cf53a_17
-  - defaults/noarch::tzdata==2021e=hda174b7_0
-  - defaults/linux-64::libgfortran-ng==7.5.0=ha8ba4b0_17
-  - defaults/linux-64::libgomp==9.3.0=h5101ec6_17
-  - defaults/linux-64::mkl==2021.4.0=h06a4308_640
-  - defaults/linux-64::_openmp_mutex==4.5=1_gnu
-  - defaults/linux-64::libgcc-ng==9.3.0=h5101ec6_17
-  - defaults/linux-64::brotli==1.0.9=he6710b0_2
-  - defaults/linux-64::expat==2.4.4=h295c915_0
-  - defaults/linux-64::giflib==5.2.1=h7b6447c_0
-  - defaults/linux-64::icu==58.2=he6710b0_3
-  - defaults/linux-64::jpeg==9d=h7f8727e_0
-  - defaults/linux-64::libffi==3.3=he6710b0_2
-  - defaults/linux-64::libsodium==1.0.18=h7b6447c_0
-  - defaults/linux-64::libuuid==1.0.3=h7f8727e_2
-  - defaults/linux-64::libwebp-base==1.2.2=h7f8727e_0
-  - defaults/linux-64::libxcb==1.14=h7b6447c_0
-  - defaults/linux-64::lz4-c==1.9.3=h295c915_1
-  - defaults/linux-64::ncurses==6.3=h7f8727e_2
-  - openssl
-  - defaults/linux-64::pcre==8.45=h295c915_0
-  - defaults/linux-64::xz==5.2.5=h7b6447c_0
-  - defaults/linux-64::zlib==1.2.11=h7f8727e_4
-  - defaults/linux-64::glib==2.69.1=h4ff587b_1
-  - defaults/linux-64::libpng==1.6.37=hbc83047_0
-  - defaults/linux-64::libxml2==2.9.12=h03d6c58_0
-  - defaults/linux-64::readline==8.1.2=h7f8727e_1
-  - defaults/linux-64::tk==8.6.11=h1ccaba5_0
-  - defaults/linux-64::zeromq==4.3.4=h2531618_0
-  - defaults/linux-64::zstd==1.4.9=haebb681_0
-  - defaults/linux-64::dbus==1.13.18=hb2f20db_0
-  - defaults/linux-64::freetype==2.11.0=h70c0345_0
-  - defaults/linux-64::gstreamer==1.14.0=h28cd5cc_2
-  - defaults/linux-64::libtiff==4.2.0=h85742a9_0
-  - defaults/linux-64::sqlite==3.38.0=hc218d9a_0
-  - defaults/linux-64::fontconfig==2.13.1=h6c09931_0
-  - defaults/linux-64::gst-plugins-base==1.14.0=h8213a91_2
-  - defaults/linux-64::lcms2==2.12=h3be6417_0
-  - defaults/linux-64::libwebp==1.2.2=h55f646e_0
-  - defaults/linux-64::python==3.9.11=h12debd9_2
-  - defaults/noarch::attrs==21.4.0=pyhd3eb1b0_0
-  - defaults/noarch::backcall==0.2.0=pyhd3eb1b0_0
-  - certifi
-  - defaults/noarch::charset-normalizer==2.0.4=pyhd3eb1b0_0
-  - defaults/noarch::cycler==0.11.0=pyhd3eb1b0_0
-  - defaults/linux-64::debugpy==1.5.1=py39h295c915_0
-  - defaults/noarch::decorator==5.1.1=pyhd3eb1b0_0
-  - defaults/noarch::defusedxml==0.7.1=pyhd3eb1b0_0
-  - defaults/linux-64::entrypoints==0.3=py39h06a4308_0
-  - defaults/noarch::executing==0.8.3=pyhd3eb1b0_0
-  - defaults/noarch::idna==3.3=pyhd3eb1b0_0
-  - defaults/noarch::ipython_genutils==0.2.0=pyhd3eb1b0_1
-  - defaults/noarch::joblib==1.1.0=pyhd3eb1b0_0
-  - defaults/noarch::json5==0.9.6=pyhd3eb1b0_0
-  - defaults/noarch::jupyterlab_widgets==1.0.0=pyhd3eb1b0_1
-  - defaults/linux-64::kiwisolver==1.3.2=py39h295c915_0
-  - defaults/linux-64::markupsafe==2.0.1=py39h27cfd23_0
-  - defaults/linux-64::mistune==0.8.4=py39h27cfd23_1000
-  - defaults/noarch::munkres==1.1.4=py_0
-  - defaults/noarch::nest-asyncio==1.5.1=pyhd3eb1b0_0
-  - defaults/noarch::pandocfilters==1.5.0=pyhd3eb1b0_0
-  - defaults/noarch::parso==0.8.3=pyhd3eb1b0_0
-  - defaults/noarch::pickleshare==0.7.5=pyhd3eb1b0_1003
-  - defaults/linux-64::pillow==9.0.1=py39h22f2fdc_0
-  - defaults/noarch::prometheus_client==0.13.1=pyhd3eb1b0_0
-  - defaults/noarch::ptyprocess==0.7.0=pyhd3eb1b0_2
-  - defaults/noarch::pure_eval==0.2.2=pyhd3eb1b0_0
-  - defaults/noarch::pycparser==2.21=pyhd3eb1b0_0
-  - defaults/noarch::pygments==2.11.2=pyhd3eb1b0_0
-  - defaults/noarch::pyparsing==3.0.4=pyhd3eb1b0_0
-  - defaults/linux-64::pyrsistent==0.18.0=py39heee7806_0
-  - defaults/linux-64::pysocks==1.7.1=py39h06a4308_0
-  - defaults/noarch::pytz==2021.3=pyhd3eb1b0_0
-  - defaults/linux-64::pyzmq==22.3.0=py39h295c915_2
-  - defaults/linux-64::qt==5.9.7=h5867ecd_1
-  - defaults/noarch::send2trash==1.8.0=pyhd3eb1b0_1
-  - defaults/linux-64::sip==4.19.13=py39h295c915_0
-  - defaults/noarch::six==1.16.0=pyhd3eb1b0_1
-  - defaults/linux-64::sniffio==1.2.0=py39h06a4308_1
-  - defaults/noarch::testpath==0.5.0=pyhd3eb1b0_0
-  - defaults/noarch::threadpoolctl==2.2.0=pyh0d69192_0
-  - defaults/linux-64::tornado==6.1=py39h27cfd23_0
-  - defaults/noarch::traitlets==5.1.1=pyhd3eb1b0_0
-  - defaults/noarch::typing_extensions==4.1.1=pyh06a4308_0
-  - defaults/noarch::wcwidth==0.2.5=pyhd3eb1b0_0
-  - defaults/linux-64::webencodings==0.5.1=py39h06a4308_1
-  - defaults/noarch::wheel==0.37.1=pyhd3eb1b0_0
-  - defaults/noarch::zipp==3.7.0=pyhd3eb1b0_0
-  - defaults/linux-64::anyio==3.5.0=py39h06a4308_0
-  - defaults/noarch::asttokens==2.0.5=pyhd3eb1b0_0
-  - defaults/noarch::babel==2.9.1=pyhd3eb1b0_0
-  - defaults/linux-64::cffi==1.15.0=py39hd667e15_1
-  - defaults/noarch::fonttools==4.25.0=pyhd3eb1b0_0
-  - defaults/linux-64::importlib-metadata==4.8.2=py39h06a4308_0
-  - defaults/linux-64::jedi==0.18.1=py39h06a4308_1
-  - defaults/noarch::jinja2==3.0.3=pyhd3eb1b0_0
-  - defaults/linux-64::jupyter_core==4.9.2=py39h06a4308_0
-  - defaults/noarch::jupyterlab_pygments==0.1.2=py_0
-  - defaults/noarch::matplotlib-inline==0.1.2=pyhd3eb1b0_2
-  - defaults/linux-64::mkl-service==2.4.0=py39h7f8727e_0
-  - defaults/noarch::packaging==21.3=pyhd3eb1b0_0
-  - defaults/noarch::pexpect==4.8.0=pyhd3eb1b0_3
-  - defaults/noarch::prompt-toolkit==3.0.20=pyhd3eb1b0_0
-  - defaults/linux-64::pyqt==5.9.2=py39h2531618_6
-  - defaults/noarch::python-dateutil==2.8.2=pyhd3eb1b0_0
-  - defaults/linux-64::setuptools==58.0.4=py39h06a4308_0
-  - defaults/linux-64::terminado==0.13.1=py39h06a4308_0
-  - defaults/noarch::typing-extensions==4.1.1=hd3eb1b0_0
-  - defaults/linux-64::websocket-client==0.58.0=py39h06a4308_4
-  - defaults/linux-64::argon2-cffi-bindings==21.2.0=py39h7f8727e_0
-  - defaults/noarch::bleach==4.1.0=pyhd3eb1b0_0
-  - defaults/linux-64::brotlipy==0.7.0=py39h27cfd23_1003
-  - defaults/linux-64::cryptography==36.0.0=py39h9ce1e76_0
-  - defaults/noarch::importlib_metadata==4.8.2=hd3eb1b0_0
-  - defaults/noarch::jupyter_client==7.1.2=pyhd3eb1b0_0
-  - defaults/linux-64::numpy-base==1.21.2=py39h79a1101_0
-  - defaults/linux-64::pip==21.2.4=py39h06a4308_0
-  - defaults/noarch::stack_data==0.2.0=pyhd3eb1b0_0
-  - defaults/noarch::argon2-cffi==21.3.0=pyhd3eb1b0_0
-  - defaults/linux-64::ipython==8.1.1=py39h06a4308_0
-  - defaults/noarch::jsonschema==3.2.0=pyhd3eb1b0_2
-  - defaults/noarch::pyopenssl==22.0.0=pyhd3eb1b0_0
-  - defaults/linux-64::ipykernel==6.9.1=py39h06a4308_0
-  - defaults/noarch::nbformat==5.1.3=pyhd3eb1b0_0
-  - defaults/noarch::urllib3==1.26.8=pyhd3eb1b0_0
-  - defaults/noarch::nbclient==0.5.11=pyhd3eb1b0_0
-  - defaults/noarch::requests==2.27.1=pyhd3eb1b0_0
-  - defaults/linux-64::nbconvert==6.3.0=py39h06a4308_0
-  - defaults/noarch::jupyter_server==1.13.5=pyhd3eb1b0_0
-  - defaults/linux-64::notebook==6.4.8=py39h06a4308_0
-  - defaults/noarch::jupyterlab_server==2.10.3=pyhd3eb1b0_1
-  - defaults/noarch::nbclassic==0.3.5=pyhd3eb1b0_0
-  - defaults/linux-64::widgetsnbextension==3.5.2=py39h06a4308_0
-  - defaults/noarch::ipywidgets==7.6.5=pyhd3eb1b0_1
-  - defaults/noarch::jupyterlab==3.3.2=pyhd3eb1b0_0
-  - defaults/linux-64::bottleneck==1.3.4=py39hce1f21e_0
-  - defaults/linux-64::matplotlib==3.5.1=py39h06a4308_1
-  - defaults/linux-64::matplotlib-base==3.5.1=py39ha18d171_1
-  - defaults/linux-64::mkl_fft==1.3.1=py39hd3c417c_0
-  - defaults/linux-64::mkl_random==1.2.2=py39h51133e4_0
-  - defaults/linux-64::numpy==1.21.2=py39h20f2e39_0
-  - defaults/linux-64::numexpr==2.8.1=py39h6abb31d_0
-  - defaults/linux-64::patsy==0.5.2=py39h06a4308_1
-  - defaults/linux-64::scipy==1.7.3=py39hc147768_0
-  - conda-forge/noarch::matplotlib-venn==0.11.6=pyh9f0ad1d_0
-  - defaults/linux-64::pandas==1.4.1=py39h295c915_1
-  - defaults/linux-64::scikit-learn==1.0.2=py39h51133e4_1
-  - defaults/noarch::seaborn==0.11.2=pyhd3eb1b0_0
-  - defaults/linux-64::statsmodels==0.13.2=py39h7f8727e_0
-  - pytorch
-  - cudatoolkit=11.3
-  - pytables
-  - tqdm
-  - ignite
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - anyio=3.5.0
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - asttokens=2.0.5
+  - attrs=21.4.0
+  - babel=2.9.1
+  - backcall=0.2.0
+  - blas=1.0
+  - bleach=4.1.0
+  - blosc=1.21.0
+  - bottleneck=1.3.4
+  - brotli=1.0.9
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.18.1
+  - ca-certificates=2022.3.29
+  - certifi=2021.10.8
+  - cffi=1.15.0
+  - charset-normalizer=2.0.4
+  - colorama=0.4.4
+  - conda=4.12.0
+  - conda-package-handling=1.8.1
+  - cryptography=36.0.0
+  - cudatoolkit=11.3.1
+  - cycler=0.11.0
+  - dbus=1.13.18
+  - debugpy=1.5.1
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - entrypoints=0.3
+  - executing=0.8.3
+  - expat=2.4.4
+  - fontconfig=2.13.1
+  - fonttools=4.25.0
+  - freetype=2.11.0
+  - giflib=5.2.1
+  - glib=2.69.1
+  - gst-plugins-base=1.14.0
+  - gstreamer=1.14.0
+  - hdf5=1.12.1
+  - icu=58.2
+  - idna=3.3
+  - ignite=0.4.8
+  - importlib-metadata=4.8.2
+  - importlib_metadata=4.8.2
+  - intel-openmp=2021.4.0
+  - ipykernel=6.9.1
+  - ipython=8.1.1
+  - ipython_genutils=0.2.0
+  - ipywidgets=7.6.5
+  - jedi=0.18.1
+  - jinja2=3.0.3
+  - joblib=1.1.0
+  - jpeg=9d
+  - json5=0.9.6
+  - jsonschema=3.2.0
+  - jupyter_client=7.1.2
+  - jupyter_core=4.9.2
+  - jupyter_server=1.13.5
+  - jupyterlab=3.3.2
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_server=2.10.3
+  - jupyterlab_widgets=1.0.0
+  - kiwisolver=1.3.2
+  - krb5=1.19.2
+  - lcms2=2.12
+  - ld_impl_linux-64=2.35.1
+  - libcurl=7.80.0
+  - libedit=3.1.20210910
+  - libev=4.33
+  - libffi=3.3
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=7.5.0
+  - libgfortran4=7.5.0
+  - libgomp=9.3.0
+  - libnghttp2=1.46.0
+  - libpng=1.6.37
+  - libsodium=1.0.18
+  - libssh2=1.9.0
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.2.0
+  - libuuid=1.0.3
+  - libuv=1.40.0
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
+  - libxcb=1.14
+  - libxml2=2.9.12
+  - lz4-c=1.9.3
+  - lzo=2.10
+  - markupsafe=2.0.1
+  - matplotlib=3.5.1
+  - matplotlib-base=3.5.1
+  - matplotlib-inline=0.1.2
+  - matplotlib-venn=0.11.6
+  - mistune=0.8.4
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - mock=4.0.3
+  - munkres=1.1.4
+  - nbclassic=0.3.5
+  - nbclient=0.5.11
+  - nbconvert=6.3.0
+  - nbformat=5.1.3
+  - ncurses=6.3
+  - nest-asyncio=1.5.1
+  - notebook=6.4.8
+  - numexpr=2.8.1
+  - numpy=1.21.2
+  - numpy-base=1.21.2
+  - openssl=1.1.1n
+  - packaging=21.3
+  - pandas=1.4.1
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - patsy=0.5.2
+  - pcre=8.45
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=9.0.1
+  - pip=21.2.4
+  - prometheus_client=0.13.1
+  - prompt-toolkit=3.0.20
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pycosat=0.6.3
+  - pycparser=2.21
+  - pygments=2.11.2
+  - pyopenssl=22.0.0
+  - pyparsing=3.0.4
+  - pyqt=5.9.2
+  - pyrsistent=0.18.0
+  - pysocks=1.7.1
+  - pytables=3.7.0
+  - python=3.9.11
+  - python-dateutil=2.8.2
+  - pytorch=1.11.0
+  - pytorch-mutex=1.0
+  - pytz=2021.3
+  - pyyaml=6.0
+  - pyzmq=22.3.0
+  - qt=5.9.7
+  - readline=8.1.2
+  - requests=2.27.1
+  - ruamel_yaml=0.15.100
+  - scikit-learn=1.0.2
+  - scipy=1.7.3
+  - seaborn=0.11.2
+  - send2trash=1.8.0
+  - setuptools=58.0.4
+  - sip=4.19.13
+  - six=1.16.0
+  - sniffio=1.2.0
+  - sqlite=3.38.0
+  - stack_data=0.2.0
+  - statsmodels=0.13.2
+  - terminado=0.13.1
+  - testpath=0.5.0
+  - threadpoolctl=2.2.0
+  - tk=8.6.11
+  - tornado=6.1
+  - tqdm=4.63.0
+  - traitlets=5.1.1
+  - typing-extensions=4.1.1
+  - typing_extensions=4.1.1
+  - tzdata=2021e
+  - urllib3=1.26.8
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - websocket-client=0.58.0
+  - wheel=0.37.1
+  - widgetsnbextension=3.5.2
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zeromq=4.3.4
+  - zipp=3.7.0
+  - zlib=1.2.11
+  - zstd=1.4.9
 prefix: /home/wma/miniconda3/envs/ECSE552proj
